Fix logo alignment.

--- a/css/objects/scope/homepage/header.scss
+++ b/css/objects/scope/homepage/header.scss
@@ -21,9 +21,10 @@ body.scp-homepage > header {
   }
 
   // Any image alone in an hgroup row is considered a logo.
-  hgroup > * > img:only-child {
+  hgroup > * > :is(img, picture, svg):only-child {
     // Size it so that it nicely fits the viewport.
     max-inline-size: min(66vmin, 100%);
     max-block-size: 66vmin;
+    margin-inline: auto;
   }
 }
